--- a/Vanilla/css/index.css
+++ b/Vanilla/css/index.css
@@ -3,13 +3,23 @@
     padding:0px;
     box-sizing: border-box;
 }
-#train-container{
+body{
     height:100vh;
+}
+#train-container{
+    height:100%;
     display:flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     background:rgba(56, 54, 54, 0.253);
     overflow: scroll;
+}
+.delete-button{
+    background:red;
+    border:none;
+    padding:5px 9px;
+    font-size: 18px;
+    border-radius: 50%;
 }
 /*Train Schedule Display*/
 #train-schedule-container{
@@ -38,8 +48,8 @@
     text-align: center;
    
 }
-tr:hover{
-    background:red;
+td{
+    padding:5px 5px;
 }
 .table-data{
   height:10px;
